--- a/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.html
@@ -5,17 +5,21 @@
       <div>Add Solids</div>
     </div>
     <hr />
-    <ng-container *ngIf="solidsForm">
+    @if (solidsForm) {
       <form [formGroup]="solidsForm">
         <ion-row class="sleep-time">
           <ion-button id="startDate">
             <ion-col> Start time: </ion-col>
-            <ion-col *ngIf="!getFormControl('startTime')">
-              <u>Set time</u>
-            </ion-col>
-            <ion-col *ngIf="getFormControl('startTime')">
-              <u>{{ getFormControl('startTime') | date : 'shortTime' }}</u>
-            </ion-col>
+            @if (!getFormControl('startTime')) {
+              <ion-col>
+                <u>Set time</u>
+              </ion-col>
+            }
+            @if (getFormControl('startTime')) {
+              <ion-col>
+                <u>{{ getFormControl('startTime') | date : 'shortTime' }}</u>
+              </ion-col>
+            }
           </ion-button>
           <ion-popover trigger="startDate" size="cover">
             <ng-template>
@@ -26,14 +30,18 @@
         <ion-row>
           <ion-item>
             <ion-select label="Food" [multiple]="true" formControlName="food">
-              <ion-select-option *ngFor="let food of foodItems" [value]="food.id">{{ food.description }}</ion-select-option>
+              @for (food of foodItems; track food) {
+                <ion-select-option [value]="food.id">{{ food.description }}</ion-select-option>
+              }
             </ion-select>
           </ion-item>
         </ion-row>
         <ion-row>
           <ion-item>
             <ion-select label="Reaction" [multiple]="true" formControlName="reactions">
-              <ion-select-option *ngFor="let reaction of reactions" [value]="reaction.id">{{ reaction.description }}</ion-select-option>
+              @for (reaction of reactions; track reaction) {
+                <ion-select-option [value]="reaction.id">{{ reaction.description }}</ion-select-option>
+              }
             </ion-select>
           </ion-item>
         </ion-row>
@@ -41,7 +49,7 @@
           <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
         </ion-row>
       </form>
-    </ng-container>
+    }
     <ng-container>
       <div class="save">
         <div class="save-inner-container">
