--- a/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.html
@@ -19,12 +19,16 @@
       <ion-row class="sleep-time">
         <ion-button id="startDate">
           <ion-col> Start time: </ion-col>
-          <ion-col *ngIf="!startDate">
-            <u>Set time</u>
-          </ion-col>
-          <ion-col *ngIf="startDate">
-            <u>{{ startDate | date : 'shortTime' }}</u>
-          </ion-col>
+          @if (!startDate) {
+            <ion-col>
+              <u>Set time</u>
+            </ion-col>
+          }
+          @if (startDate) {
+            <ion-col>
+              <u>{{ startDate | date : 'shortTime' }}</u>
+            </ion-col>
+          }
         </ion-button>
         <ion-popover trigger="startDate" size="cover">
           <ng-template>
@@ -35,12 +39,16 @@
       <ion-row class="sleep-time">
         <ion-button id="endDate">
           <ion-col> End Time: </ion-col>
-          <ion-col *ngIf="!endDate">
-            <u>Set time</u>
-          </ion-col>
-          <ion-col *ngIf="endDate">
-            <u>{{ endDate | date : 'shortTime' }}</u>
-          </ion-col>
+          @if (!endDate) {
+            <ion-col>
+              <u>Set time</u>
+            </ion-col>
+          }
+          @if (endDate) {
+            <ion-col>
+              <u>{{ endDate | date : 'shortTime' }}</u>
+            </ion-col>
+          }
         </ion-button>
         <ion-popover trigger="endDate" size="cover">
           <ng-template>
@@ -50,43 +58,50 @@
               pickerFormat="MMM DD, YYYY HH:mm"
               presentation="time"
               locale="sl-SI"
-              (ngModelChange)="manualTimeEntry()"></ion-datetime>
+            (ngModelChange)="manualTimeEntry()"></ion-datetime>
           </ng-template>
         </ion-popover>
       </ion-row>
-      <ng-container *ngIf="selectedSegment === 'pumping'">
-        <ion-row class="timer sleep-time" *ngIf="seconds || minutes || hours">
-          <div class="times">
-            <p>{{ formattedTime }}</p>
-          </div>
-        </ion-row>
+      @if (selectedSegment === 'pumping') {
+        @if (seconds || minutes || hours) {
+          <ion-row class="timer sleep-time">
+            <div class="times">
+              <p>{{ formattedTime }}</p>
+            </div>
+          </ion-row>
+        }
         <ion-row class="sleep-button-row">
           <app-circular-button (buttonClicked)="checkTimer($event)" [stateChange]="state"></app-circular-button>
         </ion-row>
-        <ion-row *ngIf="state === 2">
-          <ion-col (click)="reset()" class="sleep-time">Reset</ion-col>
-          <ion-col (click)="segmentChanged('details')" class="sleep-time">Details</ion-col>
-        </ion-row>
-      </ng-container>
-      <ng-container *ngIf="selectedSegment === 'details'">
+        @if (state === 2) {
+          <ion-row>
+            <ion-col (click)="reset()" class="sleep-time">Reset</ion-col>
+            <ion-col (click)="segmentChanged('details')" class="sleep-time">Details</ion-col>
+          </ion-row>
+        }
+      }
+      @if (selectedSegment === 'details') {
         <Form [formGroup]="pumpingForm">
+        <ion-item>
+          <ion-segment style="margin-bottom: 0" formControlName="leftRight">
+            <ion-segment-button [value]="false">
+              <ion-label>Total</ion-label>
+            </ion-segment-button>
+            <ion-segment-button [value]="true">
+              <ion-label>Left/Right</ion-label>
+            </ion-segment-button>
+          </ion-segment>
+        </ion-item>
+        @if (!getFormControlValue('leftRight')) {
           <ion-item>
-            <ion-segment style="margin-bottom: 0" formControlName="leftRight">
-              <ion-segment-button [value]="false">
-                <ion-label>Total</ion-label>
-              </ion-segment-button>
-              <ion-segment-button [value]="true">
-                <ion-label>Left/Right</ion-label>
-              </ion-segment-button>
-            </ion-segment>
-          </ion-item>
-          <ion-item *ngIf="!getFormControlValue('leftRight')">
             <ion-range aria-label=" Custom range" [min]="0" [max]="60" [pin]="true" [ticks]="true" [snaps]="true" labelPlacement="start" label="Total" formControlName="total">
               <ion-label slot="start">0</ion-label>
               <ion-label slot="end">60 ml</ion-label>
             </ion-range>
           </ion-item>
-          <ion-item *ngIf="getFormControlValue('leftRight')">
+        }
+        @if (getFormControlValue('leftRight')) {
+          <ion-item>
             <ion-range
               (ionChange)="updateTotal()"
               aria-label=" Custom range"
@@ -102,7 +117,9 @@
               <ion-label slot="end">30 ml</ion-label>
             </ion-range>
           </ion-item>
-          <ion-item *ngIf="getFormControlValue('leftRight')">
+        }
+        @if (getFormControlValue('leftRight')) {
+          <ion-item>
             <ion-range
               (ionChange)="updateTotal()"
               aria-label=" Custom range"
@@ -118,18 +135,21 @@
               <ion-label slot="end">30 ml</ion-label>
             </ion-range>
           </ion-item>
-          <ion-row class="input-row">
-            <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
-          </ion-row>
-        </Form>
-      </ng-container>
-    </div>
-    <div class="save" *ngIf="pumpingFormValid">
+        }
+        <ion-row class="input-row">
+          <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
+        </ion-row>
+      </Form>
+    }
+  </div>
+  @if (pumpingFormValid) {
+    <div class="save">
       <div class="save-inner-container">
         <ion-row class="sleep-time">
           <ion-button (click)="save()"> Save </ion-button>
         </ion-row>
       </div>
     </div>
-  </div>
+  }
+</div>
 </ion-content>
