--- a/src/app/baby-tracking/shared/circular-button/circular-button.component.scss
+++ b/src/app/baby-tracking/shared/circular-button/circular-button.component.scss
@@ -2,7 +2,7 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: #a6a998;
+  background: #85abb3;
   color: #fff;
   font-size: 18px;
   cursor: pointer;
@@ -12,7 +12,7 @@
   width: 170px;
   height: 170px;
   border-radius: 50%;
-  border: 2px dashed rgba(164, 145, 142, 0.5);
+  border: 2px dashed rgba(133, 171, 179, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
