--- a/src/app/baby-tracking/pages/dashboard/baby-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/baby-tracking.component.html
@@ -1,23 +1,25 @@
-<div class="container">
+<ion-header>
   <ion-toolbar color="primary" class="border-b border-[#898979]">
     <ion-row class="h-[10vh]">
-      <ion-col class="flex justify-start h-[10vh] items-center" size="4">
+      <ion-col class="settings flex justify-start h-[10vh] items-center" size="4">
         <ion-button (click)="navigate('settings')">
-          <ion-icon name="settings-outline"></ion-icon>
+          <ion-icon name="person-circle-outline"></ion-icon>
         </ion-button>
       </ion-col>
-      <ion-col class="flex justify-center items-center h-[10vh]" size="4"
-        ><ion-button (click)="navigate('toolbar')" class="w-full h-full flex items-center justify-center overflow-hidden"
-          ><ion-img src="assets/Logo_Header_Icon.png" alt="Grow" class="w-full h-full object-contain"></ion-img></ion-button
-      ></ion-col>
-      <ion-col class="flex justify-end h-[10vh] items-center" size="4">
-        <ion-icon name="person-circle-outline"></ion-icon>
-        profile
+      <ion-col class="image-header flex justify-center items-center h-[10vh]" size="4">
+        <ion-button (click)="navigate('toolbar')" class="header-image flex items-center justify-center overflow-hidden">
+          <ion-img src="assets/ToolBar_Header_Img.png" alt="Grow" class="w-full h-full object-contain"></ion-img>
+        </ion-button>
+      </ion-col>
+      <ion-col class="profile flex justify-end h-[10vh] items-center" size="4">
+        <ion-button>
+          <ion-icon name="menu-outline"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-toolbar>
+</ion-header>
 
-  <ion-content fullscreen>
-    <router-outlet></router-outlet>
-  </ion-content>
-</div>
+<ion-content class="ion-padding">
+  <router-outlet></router-outlet>
+</ion-content>
