--- a/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.scss
@@ -1,26 +1,32 @@
-.container {
-  /* Some container-specific styles here */
+.pumping-container {
   font-family: 'poppins';
-  padding: 0 10px 0 10px;
-  position: relative;
-  height: 100vh;
+  letter-spacing: 1.5px;
 
   .header {
-    margin: 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
-    justify-content: center;
+
+    .back-icon {
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .header-text {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .save {
+      ion-button {
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
+    }
   }
 
-  ion-input {
-    border: 1px solid #b8926a;
-    border-radius: 24px;
-    padding: 0 10px !important;
-  }
-
-  .input-row {
-    width: 100%;
+  hr {
+    border-top: 1px solid #333;
     margin: 10px 0;
   }
 
@@ -29,86 +35,108 @@
     margin-bottom: 20px;
   }
 
-  .arrow-left {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    font-size: 24px;
-    font-weight: 200;
+  ion-input {
+    border: 1px solid #b8926a;
+    border-radius: 24px;
+    padding: 0 10px !important;
   }
 
-  hr {
-    border-top: 1px solid #333;
-    margin: 20px 0;
-  }
-
-  .sleep-time {
+  .pump-time {
     width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .header-text {
+      font-family: 'poppins';
+      letter-spacing: 1.5px;
+    }
+
+    ion-button::part(native) {
+      border-radius: 12px;
+      background-color: rgba(227, 34, 69);
+    }
+
+    ion-button {
+      width: 100%;
+      margin: 5px 0 5px 0;
+    }
+  }
+
+  .timer-container {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    .time {
+      font-size: 20px;
+    }
+  }
+
+  .pump-button-row {
+    margin-top: 70px;
     display: flex;
     justify-content: center;
   }
 
-  .timer {
-    position: absolute;
-    top: 240px;
-    left: 0;
-  }
-
-  ion-button::part(native) {
-    border-radius: 12px;
-    background-color: #b8926a;
-  }
-
-  ion-button {
+  .pump-details-container {
     width: 100%;
-    margin: 5px 0 5px 0;
-  }
-
-  .sleep-button-row {
-    margin-top: 100px;
     display: flex;
     justify-content: center;
+    text-align: center;
+
+    ion-button {
+      width: 100px;
+      font-family: 'poppins';
+      letter-spacing: 1.5px;
+    }
+
+    ion-button::part(native) {
+      border-radius: 24px;
+    }
   }
 
-  .times {
-    font-size: 20px;
+  .total-segment-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
-  .save {
-    bottom: 10px;
-    left: 0;
-    position: fixed;
+  .notes-container {
+    margin-top: 10px;
     width: 100%;
-  }
 
-  .save-inner-container {
-    margin: 0 10px;
+    ion-textarea {
+      border-radius: 24px;
+      padding: 0 10px !important;
+      color: white;
+      border: none;
+      background-color: rgba(170, 170, 170);
+    }
   }
 
   ion-range::part(tick) {
-    background: #b5aca3;
+    background: lightgray;
   }
 
   ion-range::part(tick-active) {
-    background: #b5aca3;
+    background: #85abb3;
   }
 
   ion-range::part(pin) {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-
-    background: #d4cbbe;
+    background: lightgray;
     color: #fff;
-
     border-radius: 50%;
     transform: scale(1.01);
-
     top: -20px;
-
     min-width: 28px;
     height: 28px;
-    transition: transform 120ms ease, background 120ms ease;
+    transition:
+      transform 120ms ease,
+      background 120ms ease;
   }
 
   ion-range::part(pin)::before {
@@ -116,14 +144,14 @@
   }
 
   ion-range::part(knob) {
-    background: #d9c2b0;
+    background: #85abb3;
   }
 
   ion-range::part(bar) {
-    background: #b5aca3;
+    background: lightgray;
   }
 
   ion-range::part(bar-active) {
-    background: #b5aca3;
+    background: #85abb3;
   }
 }
