--- a/src/app/baby-tracking/pages/dashboard/content/tracking-dashboard/tracking-dashboard.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/tracking-dashboard/tracking-dashboard.component.scss
@@ -1,57 +1,31 @@
-//   .header-container {
-//     background-color: #a6a998;
-//     height: 20vh;
-//     padding-top: 10px;
-//     border-radius: 0 0 5px 5px;
-//     border-bottom: 1px solid #898979;
-//   }
-
-//   .profile-row {
-//   }
-
-.contents-row {
-  height: 73vh;
-  overflow-y: scroll;
+.tracking-dashboard {
+  font-family: 'poppins';
+  letter-spacing: 1.5px;
   display: flex;
-  justify-content: center;
-}
-
-.item {
-  width: 90vw;
-  height: 15vw;
-  background-color: #e32245;
-  border-radius: 22px;
-  margin: 10px 0;
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  color: #fff;
-  font-weight: 700;
-  font-size: 18px;
-  border: 1px solid rgb(171, 162, 141);
+  .row-item-container {
+    width: 90vw;
+    background-color: rgba(227, 34, 69);
+    border-radius: 24px;
+    margin: 15px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    border: 1px solid rgb(171, 162, 141);
+
+    .icon-container {
+      display: flex;
+      ion-icon {
+        font-size: 55px;
+      }
+    }
+
+    .item-name-container {
+      font-size: 16px;
+    }
+  }
 }
-
-ion-col {
-  display: flex;
-
-  align-items: center;
-  color: white;
-}
-
-//   .profile-col {
-//     justify-content: start;
-//   }
-
-//   .icon-col {
-//     justify-content: center;
-//   }
-
-//   .settings-col {
-//     justify-content: end;
-//   }
-
-//   .icon {
-//     font-size: 28px;
-//     margin-right: 5px;
-//     color: white;
-//   }
