--- a/src/app/standalone/sign-up/sign-up.component.scss
+++ b/src/app/standalone/sign-up/sign-up.component.scss
@@ -21,8 +21,8 @@
     .header-image-container {
       margin-bottom: 10px;
       .header-image {
-        width: 13vh;
-        height: 13vh;
+        width: 9vh;
+        height: 9vh;
       }
     }
 
@@ -53,6 +53,32 @@
       margin: 0 20px 0 20px;
       color: red;
       font-size: 12px;
+    }
+  }
+
+  .sub-confirmation-info-container {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 12px;
+
+    .sub-header {
+      margin-bottom: 5px;
+      h1 {
+        font-weight: bold;
+        margin: 0px !important;
+        font-size: 12px;
+      }
+    }
+
+    .sub-header-text {
+      display: flex;
+      justify-content: center;
+      p {
+        margin: 0px !important;
+        font-size: 9px;
+      }
     }
   }
 
